<resources>
    <string name="app_name" translatable="false">Fasteners Issuance Tracking</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="scanner">Scanner</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="addNewBarcodes">Add part codes to database</string>
    <string name="content_description_addNewBarcodes">uploading data to database</string>
    <string name="app_title">Scanner</string>
    <string name="no_file_selected">File is not selected</string>
    <string name="select_file">Select file</string>
    <string name="last_element">last element</string>
    <string name="part_barcode">Part Barcode</string>
    <string name="number">Number</string>
    <string name="material_code">Material code</string>
    <string name="quantity">quantity</string>
    <string name="save">Save</string>
    <string name="save_and_clear">Save and clear</string>
    <string name="add_materials_codes_to_database">Add materials codes to database</string>
    <string name="checkPartCode">Check part barcode</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="have_an_account_log_in">Have an account? Log in</string>
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="input_correct_email">Input correct email</string>
    <string name="min_length_pass">Min length 6 symbols</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="forgot_pass_email">Trouble logging in?</string>
    <string name="send_email">Send link</string>
    <string name="log_out">Log out</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="choice_file">Choice file</string>
    <string name="upload">Upload</string>
</resources>