<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.auth.LoginFragment">

        <TextView
                android:id="@+id/textView"
                android:text="@string/forgot_pass_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:fontFamily="casual"
                android:textStyle="bold|italic"
                android:layout_marginTop="24dp" />


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/sendButton"
                android:text="@string/send_email"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.875"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email" />

        <ProgressBar
                android:id="@+id/progressBarSend"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/sendButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sendButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
